"Book a demo" and "free trial" no longer wrap on browser resize. Resolves #12

--- a/src/styles/home_nav.css
+++ b/src/styles/home_nav.css
@@ -105,6 +105,7 @@
   align-items: center;
   max-height: 64px;
   overflow: hidden;
+  white-space: nowrap;
 }
 
 @media only screen and (max-width: 720px) and (max-width: 1120px) {
